Version 4.1.3.8
Added procedure-rename

Version 4.1.3.7
Added equal?/recur
Added extra argument to raise-syntax-error
Added equal<%> and interface* to scheme/class

Version 4.1.3.6
Memory accounting changed to bias charges to parent instead of children

Version 4.1.3.3
Added compile-context-preservation-enabled
Added exception-backtrace support for x86_84+JIT
Added scheme/package, scheme/splicing

Version 4.1.3.2
Added internal-definition-context-seal, which must be used on an
 internal-definition context before it's part of a fully expanded form
Added syntax-local-make-delta-introducer
Changed make-rename-transformer to accept an introducer argument that
 cooperates with syntax-local-make-delta-introducer
Added internal-defininition-context?
Added identifier-remove-from-defininition-context

Version 4.1.3, November 2008
Changed scheme to re-export scheme/port
In scheme/port: added 
Added call-with-immediate-continuation-mark
In scheme/port: added port->string, port->bytes, port->lines
 port->bytes-lines, display-lines, [call-]with-input-from-{string,bytes},
 and [call-]with-output-to-{string,bytes}
In scheme/file: added file->string, file->bytes, file->lines,
 file->value, file->bytes-lines, write-to-file, display-to-file,
 and display-lines-to-file
Added variable-reference? and empty #%variable-reference form
Extended continuation-marks to work on a thread argument

Version 4.1.2, October 2008
Changed binding of identifiers introduced by unit signatures
 to take into account the signature use's context
Added make-syntax-delta-introducer
Changed continuation-marks to accept a thread argument
Added eqv-based hash tables
Added hash-update and hash-update!
Changed -X and -S to complete directory relative to pwd, and
 changed -S to add after main collects

Version 4.1.1, October 2008
Added read-language
Added module-compiled-language-info, module->language-info,
 and 'module-language property support

Version 4.1, August 2008