@@ -1,5 +1,6 @@
 Version 4.1.3.8
 Added procedure-rename
+Added extra arguments to call-with-continuation-prompt
 
 Version 4.1.3.7
 Added equal?/recur
